  * fixed wrong locking on restore
  * bar-index: fixed wrong counted lost entries without
    fragments
  * log crashes into log file
  * avoid overflow of internal error history which could
    result in reporting the wrong error information
  * fixed race condition in database lock info in debug
    version
  * fixed possible infinite loop in continuous backup
  * BARControl: added option --info
  * BARControl: fixed list directory entries on insufficient
    permission
  * BARControl: fixed option --index-database-add: match
    pattern
  * BARControl: fixed sort file tree items by type/size/
    date+time
  * BARControl: fixed display of included/execluded entries
    via pattern
  * BARCintrol: fixed error handling when slave is in
    disconnected state

2023-04-16 0.22g
  * fixed lost resource in debug version
  * BARControl: fixed update job sate in dry-mode (issue #2,
    thanks to ChrisTG742)
  * fixed error handling WebDAV access
  * fixed test run on Jenkins

2023-03-11 0.22f
  * fixed error message: no space left on device
  * improved find storage files: skip unreadable directories
  * bar-index: fixed remove duplicate storages
  * bar-index: fixed MariaDB functions
  * bar-index: fixed option --tmp-directory
  * bar-index: improved tests
  * BARControl: fixed edit serve maintenance time (locale)
  * BARControl: fixed update file lists
  * BARControl: fixed update restore dialog

2023-01-15 0.22e
  * fixed PostgreSQL memory consumption: use single
    row mode
  * fixed memory leak

2022-12-25 0.22d
  * fixed memory leak in PostgreSQL API call
  * add missing lock slave list
  * fixed valgrind warning
  * fixed format error messages with arguments
  * fixed format some log lines
  * fixed full-text-search matching for SQLite
  * fixed SQLite database locking when new storage
    is inserted
  * fixed configuration issue handling: report as
    error
  * fixed memory leak in --transform

2022-11-15 0.22c
  * fixed trigger pairing thread